--- a/Máy Tính Tam Kỳ (Moblie).html
+++ b/Máy Tính Tam Kỳ (Moblie).html
@@ -6,6 +6,7 @@
     <meta name="theme-color" content="#1E3A8A">
     <title>Máy Tính Tam Kỳ - Cửa hàng máy tính uy tín</title>
     <link rel="manifest" href="manifest.json">
+    <link rel="icon" type="image/png" href="Image/favicon2.png">
     <style>
         * {
             margin: 0;
@@ -1396,4 +1397,5 @@
     </div>
 
 </body>
+
 </html>
